// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    class="flex w-full flex-col gap-4"
    data-testid="container"
  >
    <div
      data-testid="search-people"
    >
      SearchPeople
    </div>
    <div
      data-testid="search-collections"
    >
      SearchCollections
    </div>
    <div
      class="flex w-full flex-col gap-4"
      data-testid="container"
    >
      <div
        aria-label="Search content type"
        class="flex gap-2"
        data-testid="container"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-brand text-background border-brand hover:bg-brand/90 h-8 gap-1.5 px-3 has-[>svg]:px-3.5"
          data-size="sm"
          data-slot="button"
          data-variant="brand"
          role="tab"
          type="button"
        >
          Posts
        </button>
        <button
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs hover:text-accent-foreground bg-input/30 border-input hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-3.5"
          data-size="sm"
          data-slot="button"
          data-variant="outline"
          role="tab"
          type="button"
        >
          Links
        </button>
      </div>
      <h2
        class="text-2xl font-light text-muted-foreground"
        data-testid="heading-2"
      >
        Posts
      </h2>
      <div
        data-cy="post-search-results"
        data-testid="container"
      >
        <div
          data-testid="timeline-feed"
          data-variant="search"
        >
          TimelineFeed
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with an invalid query 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <p
    class="text-base font-medium text-muted-foreground"
    data-testid="search-invalid-query"
    role="alert"
  >
    Search can contain up to 4 terms
  </p>
  <div
    data-testid="search-empty-state"
  >
    SearchEmptyState
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with full-text results 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    class="flex w-full flex-col gap-4"
    data-testid="container"
  >
    <div
      data-testid="search-content-tags"
    >
      SearchContentTags
    </div>
    <div
      data-cy="post-search-results"
      data-testid="container"
    >
      <div
        data-testid="timeline-feed"
        data-variant="search"
      >
        TimelineFeed
      </div>
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with no tags 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-testid="search-empty-state"
  >
    SearchEmptyState
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with tags present 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    class="flex w-full flex-col gap-4"
    data-testid="container"
  >
    <div
      data-testid="search-people"
    >
      SearchPeople
    </div>
    <div
      data-testid="search-collections"
    >
      SearchCollections
    </div>
    <div
      class="flex w-full flex-col gap-4"
      data-testid="container"
    >
      <div
        aria-label="Search content type"
        class="flex gap-2"
        data-testid="container"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-brand text-background border-brand hover:bg-brand/90 h-8 gap-1.5 px-3 has-[>svg]:px-3.5"
          data-size="sm"
          data-slot="button"
          data-variant="brand"
          role="tab"
          type="button"
        >
          Posts
        </button>
        <button
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs hover:text-accent-foreground bg-input/30 border-input hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-3.5"
          data-size="sm"
          data-slot="button"
          data-variant="outline"
          role="tab"
          type="button"
        >
          Links
        </button>
      </div>
      <h2
        class="text-2xl font-light text-muted-foreground"
        data-testid="heading-2"
      >
        Posts
      </h2>
      <div
        data-cy="post-search-results"
        data-testid="container"
      >
        <div
          data-testid="timeline-feed"
          data-variant="search"
        >
          TimelineFeed
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with tags present and a non-All content filter 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-cy="post-search-results"
    data-testid="container"
  >
    <div
      data-testid="timeline-feed"
      data-variant="search"
    >
      TimelineFeed
    </div>
  </div>
</div>
`;
